<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_title"
        android:textColor="#0E0E0E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="search"
        android:text="@string/search_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keywordLabel" />

    <EditText
        android:id="@+id/startDateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/date_format"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <EditText
        android:id="@+id/endDateField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/date_format"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/time_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle" />

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/location_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/topLeftLatField"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="latitude"
        android:inputType="none|numberSigned|numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/topLeftLabel"
        app:layout_constraintStart_toEndOf="@+id/topLeftLabel"
        app:layout_constraintTop_toTopOf="@+id/topLeftLabel" />

    <TextView
        android:id="@+id/topLeftLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/topLeftLabel"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

    <TextView
        android:id="@+id/bottomRightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/bottomRightLabel"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLeftLabel" />

    <EditText
        android:id="@+id/bottomRightLatField"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="latitude"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomRightLabel"
        app:layout_constraintStart_toEndOf="@+id/bottomRightLabel"
        app:layout_constraintTop_toTopOf="@+id/bottomRightLabel" />

    <EditText
        android:id="@+id/topLeftLngField"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="longitude"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/topLeftLatField"
        app:layout_constraintStart_toEndOf="@+id/topLeftLatField"
        app:layout_constraintTop_toTopOf="@+id/topLeftLatField" />

    <EditText
        android:id="@+id/bottomRightLngField"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="longitude"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomRightLatField"
        app:layout_constraintStart_toEndOf="@+id/bottomRightLatField"
        app:layout_constraintTop_toTopOf="@+id/bottomRightLatField" />

    <TextView
        android:id="@+id/keywordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="Keyword:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomRightLabel" />

    <EditText
        android:id="@+id/keywordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/keywordLabel"
        app:layout_constraintStart_toEndOf="@+id/keywordLabel"
        app:layout_constraintTop_toTopOf="@+id/keywordLabel"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Start Date:"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="End Date:"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>